feat(scripts): update e2e scripts and Makefile